--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>登录</title>
+    <title>小湫-登录</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <style>
       * {
@@ -228,7 +228,7 @@
     <div class="container">
       <!-- 登录界面 -->
       <div class="login-box" id="loginBox">
-        <h2>验证码登录</h2>
+        <h2>登录</h2>
         <form id="loginForm">
           <div class="form-group">
             <label for="phone">手机号</label>
