--- a/index.html
+++ b/index.html
@@ -258,9 +258,7 @@
     <!-- 登录成功界面 -->
     <div class="success-box" id="successBox">
       <div class="success-icon"></div>
-      <div class="success-text">登录成功！</div>
-      <p style="color: #999; margin-bottom: 20px">欢迎回来</p>
-
+      <div class="success-text">登录成功</div>
       <div class="user-info" id="userInfo">
         <p><strong>手机号：</strong><span id="userPhone"></span></p>
         <p><strong>登录时间：</strong><span id="loginTime"></span></p>
