--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   <div class="container">
     <!-- 登录界面 -->
     <div class="login-box" id="loginBox">
-      <h2>小湫羊毛登录</h2>
+      <h2>内测授权登录</h2>
       <form id="loginForm">
         <div class="form-group">
           <label for="phone">手机号</label>
