--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       border-radius: 20px;
       box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
       padding: 40px;
-      width: 400px;
-      max-width: 90%;
+      max-width: 400px;
+      width: 90%;
     }
 
     .login-box {
