--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
       <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
     </button>
     <div class="menu-dropdown" id="menuDropdown">
-      <a href="./ksck.html" class="menu-item">快手ck转换</a>
+     <a href="./ksck.html" class="menu-item">快手ck转换</a>
+      <a href="./qiehuang.html" class="menu-item">茄皇登录</a>
       <div class="menu-divider"></div>
       <a href="javascript:location.reload()" class="menu-item">刷新页面</a>
     </div>
