--- a/qiehuang.html
+++ b/qiehuang.html
@@ -173,7 +173,7 @@
         <h2>玩法说明：</h2>
         <ul>
           <li>1、打开小程序《统一梦时代》</li>
-          <li>2、点开个人中心 - 点击头像昵称，绑定手机号</li>
+          <li>2、点开个人中心 - 点击头像昵称，绑定手机号，记下客户编号和手机号</li>
           <li>3、步骤2中的客户编号填写到下面表单中，手机号也填写到以下3个表单中</li>
           <li>4、回到小程序首页顶部，轮播图中找到《茄皇的家》，点击立即参与点开一次即可</li>
         </ul>
