--- a/qiehuang.html
+++ b/qiehuang.html
@@ -215,7 +215,7 @@
           </div>
 
           <div class="form-group">
-            <label for="address">收货地址</label>
+            <label for="address">收货地址（必须按按照 省市区街道详细地址 填写，例如：湖北省武汉市洪山区东湖街道xx号）</label>
             <input
               type="text"
               id="address"
