--- a/qiehuang.html
+++ b/qiehuang.html
@@ -338,7 +338,7 @@
 
           <div class="form-group">
             <label for="shopId"
-              >兑换id</label
+              >兑换id(建议选择15，牛肉桶面)</label
             >
             <div class="products-container">
               <div class="products-title">点击下方商品自动填写ID：</div>
