--- a/qiehuang.html
+++ b/qiehuang.html
@@ -275,7 +275,7 @@
     <div class="container">
       <h1>茄皇提交表单</h1>
       <div class="tips">
-        <h2>玩法说明：</h2>
+        <h2>玩法说明(务必全部照做)：</h2>
         <ul>
           <li>1、打开小程序《统一梦时代》</li>
           <li>2、点开个人中心 - 点击头像昵称，绑定手机号，记下客户编号和手机号</li>
